--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,23 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+#
+# hdj
+#
+
 # Applications are not part of the core-system
 Applications/*
+
+# I use IntelliJ for development ...
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dataSources.*
+
+# "compiler" output
+*.out
+parsetab.py*
+
+# now vim swp file
+*.swp
+
 
