logging with date

--- a/logging.conf
+++ b/logging.conf
@@ -101,6 +101,6 @@ args=(sys.stdout,)
 #format=%(filename)-10s|%(funcName)-10s@%(lineno)03d -- %(name)-40s - %(levelname)-10s - %(message)s
 #format=%(filename)-20s|%(funcName)-15s@%(lineno)03d -- %(name)-30s - %(levelname)-10s - %(message)s
 #format=%(filename)-20s|%(funcName)12s@%(lineno)03d %(process)5d/%(processName)-15s-> %(name)-30s - %(levelname)s - %(message)s
-format=%(lineno)3d @ %(filename)-25s %(process)5d/%(processName)-25s-> %(name)-30s - %(levelname)s - %(message)s
-datefmt=
+format=%(asctime)s %(lineno)3d @ %(filename)-25s %(process)5d/%(processName)-25s-> %(name)-30s - %(levelname)s - %(message)s
+datefmt='%Y-%m-%d %H:%M:%S'
 
